Fixed flexbox gaps, coockies notification text. Removed 1 case

--- a/src/components/pageSections/Acquaintance/index.module.scss
+++ b/src/components/pageSections/Acquaintance/index.module.scss
@@ -46,15 +46,15 @@
 }
 
 .cards {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-auto-flow: column;
     width: 100%;
-    gap: 2.7%;
+    column-gap: 2.7%;
+    row-gap: 0;
 
     @media (max-width: $screenSm) {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 7vw;
+        grid-auto-flow: row;
+        row-gap: 7vw;
+        column-gap: 0;
     }
 }
