--- a/src/components/pageSections/Tagline/index.module.scss
+++ b/src/components/pageSections/Tagline/index.module.scss
@@ -37,7 +37,6 @@
         justify-content: flex-start;
         align-items: flex-start;
         margin: 15px 0;
-        gap: 15px;
     }
 }
 
@@ -65,6 +64,7 @@
 
     @media (max-width: $screenXs) {
         font-size: 5vw;
+        margin-bottom: 15px;
     }
 
     @media (max-width: $screen2Xs) {
